# Exchange

./: CMakeLists.txt  README.md
src/: Makefile  exchange.cpp  exchange.hpp  main.cpp  stock.cpp  stock.hpp
src/charts/: chart.cpp  chart.hpp  chartclassic.cpp  chartclassic.hpp
src/livestock/: livestock.cpp  livestock.hpp
src/startscreen/: startscreen.cpp  startscreen.hpp
templates/: companynames.list
